Fix letter spacing on intro__header

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ img {
 .intro__header {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.125rem;
+    letter-spacing: 10px;
 }
 
 .intro__title {
